--- a/screen.html
+++ b/screen.html
@@ -27,7 +27,7 @@
 
             <section class="grid-item2 sec2  ">
                 <h2> Monthly Subscription</h2>
-                <p>&dollar;29 per month</p>
+                <p><span class="dolar">&dollar;29</span> per month</p>
                 <p>Full access for less than &dollar;1 a day</p>
                 <button class="submit">Sing Up</button>
 
