Alteração dos estilos css e html confome Projeto

--- a/screen.html
+++ b/screen.html
@@ -34,13 +34,22 @@
             </section>
             <section class="grid-item3 sec3 ">
                 <h2>Why Us</h2>
-                <p>Tutorials by industry experts
-                    Peer &amp; expert code review
+                <p id="p"></p>
+                <script>
+                    let text = document.getElementById('p')
+
+                    text.innerText =
+                    `Tutorial by industry experts
+                    Peer & expert code review
                     Coding exercises
                     Access to our GitHub repos
                     Community forum
                     Flashcard decks
-                    New videos every week</p>
+                    New videos every week`
+
+                </script>
+
+
             </section>
 
 
